# RecognitionTests

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pointCloudStatistic  pointCloudStatistic.cbp
pc/: log_1.txt  log_10000.txt  log_100000.txt  log_1000000.txt  log_20000.txt~  log_500000.txt
pc/apple/: apple_1.pcd  apple_1.ply  apple_1.ply~  apple_10.pcd  apple_10.ply  apple_10.ply~  apple_2.pcd  apple_2.ply  apple_2.ply~  apple_3.pcd  apple_3.ply  apple_3.ply~  apple_4.pcd  apple_4.ply  apple_4.ply~  apple_5.pcd  apple_5.ply  apple_5.ply~  apple_6.pcd  apple_6.ply  apple_6.ply~  apple_7.pcd  apple_7.ply  apple_7.ply~  apple_8.pcd  apple_8.ply  apple_8.ply~  apple_9.pcd  apple_9.ply  apple_9.ply~  apple_C.pcd  apple_C.ply  apple_C.ply~
pc/bowl/: bowl_1.pcd  bowl_1.ply  bowl_1.ply~  bowl_10.pcd  bowl_10.ply  bowl_10.ply~  bowl_2.pcd  bowl_2.ply  bowl_2.ply~  bowl_3.pcd  bowl_3.ply  bowl_3.ply~  bowl_4.pcd  bowl_4.ply  bowl_4.ply~  bowl_5.pcd  bowl_5.ply  bowl_5.ply~  bowl_6.pcd  bowl_6.ply  bowl_6.ply~  bowl_7.pcd  bowl_7.ply  bowl_7.ply~  bowl_8.pcd  bowl_8.ply  bowl_8.ply~  bowl_9.pcd  bowl_9.ply  bowl_9.ply~  bowl_C.pcd  bowl_C.ply  bowl_C.ply~
pc/crate/: crate_1.pcd  crate_1.ply  crate_1.ply~  crate_2.pcd  crate_2.ply  crate_2.ply~  crate_3.pcd  crate_3.ply  crate_3.ply~  crate_4.pcd  crate_4.ply  crate_4.ply~  crate_5.pcd  crate_5.ply  crate_5.ply~  crate_6.pcd  crate_6.ply  crate_6.ply~  crate_C.pcd  crate_C.ply  crate_C.ply~
pc/cup/: cup_1.pcd  cup_1.ply~  cup_1.ply~~  cup_10.pcd  cup_10.ply  cup_10.ply~~  (+27 more)
src/: mainProgram.cpp
(+295 files in other folders)
